creat an account and log back

--- a/pom.xml
+++ b/pom.xml
@@ -78,9 +78,19 @@
             <version>4.16.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
 
 
     </dependencies>
+
+
+
+
+
 
 
 </project>
